docs/tests/typing/bad/testfile-assign-3.cpp

int main() { int x; int y; (x+y) = 2; }
